--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
+    "html-to-docx": "^1.8.0",
     "jspdf": "^3.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
